// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`context-log-level-test allows overriding default log level 1`] = `
Map {
  "NONE" => Array [],
  "DEBUG" => Array [],
  "INFO" => Array [],
  "WARN" => Array [
    Array [
      "[1] [93mWARN ctx Should show up[39m",
      "WARN",
      "ctx",
    ],
  ],
  "ERROR" => Array [],
}
`;

exports[`context-log-level-test non-alphanumeric character sequences are handled as underscores in env variable name 1`] = `
Map {
  "NONE" => Array [],
  "DEBUG" => Array [],
  "INFO" => Array [],
  "WARN" => Array [
    Array [
      "[1] [93mWARN a+-/b    c Should show up[39m",
      "WARN",
      "a+-/b    c",
    ],
  ],
  "ERROR" => Array [],
}
`;
